feat(staff): elegir conf para editar